--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "nonce": "^1.0.4",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   }
