--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Cryptopia exchange api wrapper",
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
